# linquebot_rs

./: .env.example  .gitignore  Cargo.toml  config example.toml  docker-compose.yaml  flake.nix  readme.md  rustc-ice-2025-01-27T05_53_40-29148.txt  rustc-ice-2025-01-27T05_53_40-45420.txt  start.fish
.github/workflows/: nix-build.yml  rust.yml
lm/: Cargo.toml  README.md
lm/src/: dataset.rs  lib.rs  read_messages.rs
sql/: init.sql
src/: globals.rs  main.rs
src/assets/: answer_book.rs  bad_answer_book.rs  idiom.rs  mod.rs  tarot.rs
src/db/: mod.rs
src/linquebot/: config.rs  db.rs  mod.rs  msg_context.rs  vector_db.rs
src/mods/: answer_book.rs  bot_on_off.rs  debuger.rs  dice.rs  explain.rs  greetings.rs  help.rs  hitokoto.rs  jielong.rs  legacy.rs  markov.rs  mod.rs  rand.rs  repeater.rs  rong.rs  say.rs  set_title.rs  skip_other_bot.rs  tarot.rs  tarot_ai.rs  todo.rs  tools.rs  waife.rs
src/mods/bestapo/: message_handler.rs  mod.rs  toggle.rs  utils.rs
src/mods/search/: do_record.rs  do_search.rs  embedding.rs  message_handler.rs  mod.rs  qwen3_embedding.rs  toggle.rs
src/resolvers/: message.rs  update.rs
src/test_utils/: mod.rs
src/utils/: base64.rs  mod.rs  msg_context.rs  pattern.rs
