[package]
name = "linquebot_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
teloxide-core = "0.10.1"
chrono = "0.4.39"
colored = "2.2.0"
rand = "0.8.5"
reqwest = { version = "0.12.12", features = ["json"] }
serde = "1.0.217"
log = "0.4.25"
simple_logger = { version = "5.0.0", features = ["colors", "threads", "nightly", "stderr"] }
regex = "1.11.1"
