[package]
name = "linquebot_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
teloxide-core = "0.10.1"
chrono = "0.4.39"
colored = "2.2.0"
rand = { version = "0.8.5", features = ["small_rng"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = "1.0.217"
log = "0.4.25"
regex = "1.11.1"
ctor = "0.2.9"
urlencoding = "2.1.3"
ammonia = "4.0.0"
quick_cache = "0.6.9"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
anyhow = "1.0.95"
env_logger = "0.11.6"
ron = "0.8.1"
serde_json = "1.0.138"
