[package]
name = "linquebot_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "signal"] }
teloxide-core = "0.13.0"
chrono = "0.4.43"
colored = "3.1.1"
rand = { version = "0.9.2", features = ["small_rng"] }
reqwest = { version = "0.13.1", features = ["json"] }
serde = "1.0.228"
log = "0.4.29"
regex = "1.12.2"
ctor = "0.6.3"
urlencoding = "2.1.3"
ammonia = "4.1.2"
quick_cache = "0.6.18"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "postgres"] }
anyhow = "1.0.100"
env_logger = "0.11.8"
ron = "0.12.0"
serde_json = "1.0.149"
graphviz-rust = "0.9.6"
dotenvy = "0.15.7"
hf-hub = "0.4.3"
unicode-segmentation = "1.12.0"
tokio-util = "0.7.18"
llama-cpp-2 = { version = "0.1.132", features = [] }

[features]
default = ["full"]
full = ["tarot", "tarot_ai", "explain", "jielong"]
tarot = []
tarot_ai = []
explain = []
jielong = []
